crates/dlin-core/src/render/snapshots/dlin_core__render__impact__tests__snapshot_impact_json_with_sql.snap
---
source: src/render/impact.rs
expression: output
---
[
  {
    "source_model": "stg_orders",
    "overall_severity": "critical",
    "affected_models": 1,
    "affected_tests": 1,
    "affected_exposures": 1,
    "exposure_paths": [
      {
        "exposure": "dashboard",
        "path": [
          "stg_orders",
          "orders",
          "dashboard"
        ]
      }
    ],
    "exposure_paths_truncated": false,
    "impacted_nodes": [
      {
        "unique_id": "exposure.dashboard",
        "label": "dashboard",
        "node_type": "exposure",
        "severity": "critical",
        "distance": 2
      },
      {
        "unique_id": "model.orders",
        "label": "orders",
        "node_type": "model",
        "file_path": "models/marts/orders.sql",
        "severity": "high",
        "distance": 1,
        "sql_content": "SELECT\n    o.id,\n    o.status,\n    s.total\nFROM {{ ref('stg_orders') }} o\nJOIN {{ ref('stg_payments') }} s ON o.id = s.order_id"
      },
      {
        "unique_id": "test.orders_positive",
        "label": "orders_positive",
        "node_type": "test",
        "severity": "low",
        "distance": 2
      }
    ]
  }
]
